DuPont DevSB/src/objects/pse__Utilization__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>pse__Calculate_Cross_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the calculation of cross product combination of region, practice and group.
Such as Region by Practice, or Group by Region</description>
        <inlineHelpText>Allows the calculation of cross product combination of region, practice and group.
Such as Region by Practice, or Group by Region</inlineHelpText>
        <label>Calculate Cross Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Calculate_Held_Resource_Request_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, calculate the amount of scheduled time for held (unassigned) resource requests.</description>
        <inlineHelpText>If true, calculate the amount of scheduled time for held (unassigned) resource requests.</inlineHelpText>
        <label>Calculate Held Resource Request Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Calculate_Summary_By_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Summary By Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Calculate_Unheld_Resource_Request_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Unheld Resource Request Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Opportunity_Probability__c</fullName>
        <label>Default Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Minimum_Opportunity_Probability__c</fullName>
        <label>Minimum Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Batch_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <inlineHelpText>The number of resources to process in a single batch when calculating utilization</inlineHelpText>
        <label>Resource Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Batch_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Resource Request Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Target_Utilization_Approach__c</fullName>
        <defaultValue>&quot;WEIGHTED&quot;</defaultValue>
        <description>For a value of “LAST” only the Utilization Target at the end date of any Time Period is used for the Utilization Detail result for that period, multiplying it with the calendar hours.
For a value of “WEIGHTED” (default) between each Resource Change, the effective Target Utilization for each segment between Resource Change is multiplied with the calendar hours for that segment, and the resulting subtotals from each segment are summed (across both Historical and Scheduled periods) to arrive at Utilization Target Hours.</description>
        <label>Target Utilization Approach</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Statuses__c</fullName>
        <defaultValue>&apos;Submitted,Approved&apos;</defaultValue>
        <description>A comma delimited list of timecard status values that are used to determine which timecards are used for utilization calculations.</description>
        <inlineHelpText>A comma delimited list of timecard status values that are used to determine which timecards are used for utilization calculations.</inlineHelpText>
        <label>Timecard Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Uncheck_Master_Based_On_Time_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether that &quot;Is Report Master&quot; flag is reset based on the Time Period and Parent object (Checked) or based on the Utilization Calculation Name (Unchecked)</description>
        <inlineHelpText>Determines whether that &quot;Is Report Master&quot; flag is reset based on the Time Period and Parent object (Checked) or based on the Utilization Calculation Name (Unchecked)</inlineHelpText>
        <label>Uncheck Master Based On Time/Parent</label>
        <type>Checkbox</type>
    </fields>
    <label>Utilization</label>
</CustomObject>